test/cases/compile_errors/non_pointer_given_to_intFromPtr.zig
export fn entry(x: i32) usize {
    return @intFromPtr(x);
}

// error
//
// :2:24: error: expected pointer, found 'i32'
